--- a/sing in.css
+++ b/sing in.css
@@ -26,7 +26,7 @@ html, body{
     align-items: center;
 
     background: rgb(1, 0, 29);
-    color: orange;
+    color: rgb(15, 190, 73);
 
 }
 
@@ -100,7 +100,7 @@ form{
     justify-content: right;
     align-items: center;
     
-    background: orange;
+    background: rgb(15, 190, 73);
     color: white;
     
 }
