--- a/sing in mobile.css
+++ b/sing in mobile.css
@@ -3,6 +3,10 @@
     padding: 0;
 }
 
+:root{
+    --orange: #FFBC31;
+}
+
 html, body{
 
     width: 100%;
@@ -19,7 +23,7 @@ html, body{
     align-items: center;
 
     background: rgb(1, 0, 29);
-    color: rgb(255, 102, 0);
+    color: var(--orange);
 
 }
 
