--- a/sing in.css
+++ b/sing in.css
@@ -4,7 +4,13 @@
 
     margin:0;
     padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
 
+}
+
+:root{
+    --color2: #FF7300;
+    --color1: #ECE5DD;
 }
 
 html, body{
@@ -25,8 +31,8 @@ html, body{
     justify-content: center;
     align-items: center;
 
-    background: rgb(1, 0, 29);
-    color: rgb(255, 102, 0);
+    background: var(--color1);
+    color: var(--color2);
 
 }
 
@@ -100,8 +106,8 @@ form{
     justify-content: right;
     align-items: center;
     
-    background: rgb(255, 102, 0);
-    color: white;
+    background: var(--color2);
+    color: var(--color1);
     
 }
 
